--- a/images/contact.css
+++ b/images/contact.css
@@ -49,6 +49,9 @@ table {
 	border-spacing: 0;
 }
 
+/* From here, I would write my own code */
+
+
 div{
     background-color:antiquewhite;
     height:30px;
