--- a/images/home.css
+++ b/images/home.css
@@ -1,10 +1,141 @@
+/* Reset CSS*/
+
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* From here, I would write my own code */
+
+*{
+    box-sizing:border-box;
+}
+
 body{
-    background-color: #E0C097;
+    background-image: linear-gradient(to bottom right,#F5E8C7,#DEBA9D,#9E7777);
     margin:0;
-    padding:0
+    padding:0;
+    background-repeat:no-repeat;
+    background-size:cover;
+    height:100%;
+    
+}
+
+.navbar_container{
+    background-color:#2D2424;
+    height:60px;   
+    position:relative;
 }
 
 .navbar{
+    
+    position:absolute;
+    right:0;
+    
+}
+
+.navbar_item{
+    float:left;
+    padding:20px;
+    width:100px;
+    height:60px;
+    text-align: center;
+    color:#fff;
+    font-family: 'Roboto', sans-serif;
+}
+
+#signin{
+    font-weight:900;
+    border:none;
+    margin-left:30px;
+    margin-right:30px;
+    margin-top:10px;
+    padding-top:10px;
+    height:40px;
+    border-radius:10px;
+    background-image: linear-gradient(#E0C097,#B85C38,#5C3D2E);
+}
+
+.content_area{
+    display:block;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+    color:#B85C38;
+    font-weight:400;
+    font-size:24px;
+    margin-top:100px;
+    height:592px;
+    /*height:100vh --for 100% of the viewport height*/
+}
+
+#content_header{
+    font-size:40px;
+    color:#5C3D2E;
+    font-weight: 900;;
+}
+
+.footer_container{
     background-color:#2D2424;
-    height:50px;   
+    height:200px;  
+    bottom:0;
+}
+
+.footer{
+    padding-top:20px;
+    position:absolute;
+    right:0;
+}
+
+
+.footer_column{
+    color:#fff;
+    font-family: 'Roboto', sans-serif;
+    float:left;
+    margin-left:40px;
+    margin-right:40px;
+    font-size: smaller;
 }
