--- a/images/service.css
+++ b/images/service.css
@@ -1,13 +1,111 @@
-div{
-    background-color:antiquewhite;
-    border:1px solid;
-    margin-bottom:10px;
-    height:100px;
-    overflow:hidden;
+/* Reset CSS*/
+
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 
-.consul{
-    float:left;
-    width:50%;
+/* From here, I would write my own code */
+
+*{
+    box-sizing:border-box;
+}
+
+body{
+    font-family: 'Open Sans', sans-serif;
     
+}
+
+.container{
+    width:80%;
+    margin-left: auto;
+    margin-right:auto;
+}
+
+.toprow{
+    height:75px;
+}
+
+.boxes{
+    height:50vh;
+    float:left;
+    width:24.8%;
+    padding:10px;
+    color:#fff;
+    margin:0.1%
+}
+
+
+
+#latinquote{
+    font-style: italic;
+    display:block;
+}
+#engquote{
+    font-size: smaller;
+}
+#box1{
+    background-color: #544179;
+}
+#box2{
+    background-color: #6166B3;
+}
+#box3{
+    background-color: #32C1CD;
+}
+#box4{
+    background-color: #17D7A0;
+}
+
+@media screen and(max-width:800px){
+    .container,
+    .toprow,
+    .boxes{
+        width:100%;
+        float:none;
+    }
 }
