--- a/images/home.css
+++ b/images/home.css
@@ -85,11 +85,11 @@ body{
     height:60px;
     text-align: center;
     color:#fff;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 #signin{
-    font-weight:900;
+    font-weight:600;
     border:none;
     margin-left:30px;
     margin-right:30px;
@@ -102,7 +102,7 @@ body{
 
 .content_area{
     display:block;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     text-align: center;
     color:#B85C38;
     font-weight:400;
@@ -115,7 +115,7 @@ body{
 #content_header{
     font-size:40px;
     color:#5C3D2E;
-    font-weight: 900;;
+    font-weight: 800;;
 }
 
 .footer_container{
@@ -133,7 +133,7 @@ body{
 
 .footer_column{
     color:#fff;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     float:left;
     margin-left:40px;
     margin-right:40px;
