--- a/images/service.css
+++ b/images/service.css
@@ -60,59 +60,62 @@ body{
     
 }
 
-.container{
-    width:80%;
-    margin-left: auto;
-    margin-right:auto;
-}
+
 
 .toprow{
     height:75px;
 }
 
-.boxes{
-    color:#fff;
-    
-    
+h2{
+    font-weight:bold;
 }
 
-#latinquote{
-    font-style: italic;
-    display:block;
+p{
+    font-size: 0.8rem;
+    
 }
+.boxing1, .boxing2{
+    color:#fff;
+    float:left;
+    width:25%;
+    padding:8px;
+    min-height: 30em;
+}
+
+
 #engquote{
     font-size: smaller;
 }
 #box1{
     background-color: #544179;
-    float:left;
-    width:25%;
-    padding:8px;
+    
 }
 #box2{
     background-color: #6166B3;
-    float:left;
-    width:25%;
-    padding:8px;
+   
 }
 #box3{
     background-color: #32C1CD;
-    float:left;
-    width:25%;
-    padding:8px;
+    
 }
 #box4{
     background-color: #17D7A0;
-    float:left;
-    width:25%;
-    padding:8px;
 }
 
-@media screen and(max-width:800px){
-    .container,
-    .toprow,
-    .boxes{
+@media screen and (max-width:812px){
+    
+    .boxing1, .boxing2{
+        width:50%;
+        float:left;
+        min-height:187.5px;
+    }
+}
+
+@media screen and (max-width:450px){
+    
+    .boxing1, .boxing2{
         width:100%;
         float:none;
+        max-height:203px;
     }
 }
