--- a/images/home.css
+++ b/images/home.css
@@ -56,86 +56,34 @@ table {
 }
 
 body{
-    background-image: linear-gradient(to bottom right,#F5E8C7,#DEBA9D,#9E7777);
-    margin:0;
-    padding:0;
-    background-repeat:no-repeat;
-    background-size:cover;
-    height:100%;
-    
-}
-
-.navbar_container{
-    background-color:#2D2424;
-    height:60px;   
-    position:relative;
+    background-color: #F8F8F6;
+    font-family: 'Open Sans', sans-serif;
+    width:80%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .navbar{
-    
-    position:absolute;
-    right:0;
-    
+    height:100px;
 }
 
-.navbar_item{
-    float:left;
-    padding:20px;
-    width:100px;
-    height:60px;
-    text-align: center;
-    color:#fff;
-    font-family: 'Open Sans', sans-serif;
+.nav_item{
+    padding-top:12px;
+    padding-bottom:4px;
+    border-bottom:1px solid #000000
+}
+.container{
+    height:700px;
+    margin-top:250px;
 }
 
-#signin{
+#header{
+    font-size: 36px;
+    font-weight: 600;
+    color:#6B9B8A;
+}
+
+#subheader{
+    font-size:36px;
     font-weight:600;
-    border:none;
-    margin-left:30px;
-    margin-right:30px;
-    margin-top:10px;
-    padding-top:10px;
-    height:40px;
-    border-radius:10px;
-    background-image: linear-gradient(#E0C097,#B85C38,#5C3D2E);
-}
-
-.content_area{
-    display:block;
-    font-family: 'Open Sans', sans-serif;
-    text-align: center;
-    color:#B85C38;
-    font-weight:400;
-    font-size:24px;
-    margin-top:100px;
-    height:592px;
-    /*height:100vh --for 100% of the viewport height*/
-}
-
-#content_header{
-    font-size:40px;
-    color:#5C3D2E;
-    font-weight: 800;;
-}
-
-.footer_container{
-    background-color:#2D2424;
-    height:200px;  
-    bottom:0;
-}
-
-.footer{
-    padding-top:20px;
-    position:absolute;
-    right:0;
-}
-
-
-.footer_column{
-    color:#fff;
-    font-family: 'Open Sans', sans-serif;
-    float:left;
-    margin-left:40px;
-    margin-right:40px;
-    font-size: smaller;
 }
