--- a/images/home.css
+++ b/images/home.css
@@ -5,85 +5,198 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 /* From here, I would write my own code */
 
-*{
-    box-sizing:border-box;
+* {
+  box-sizing: border-box;
 }
 
-body{
-    background-color: #F8F8F6;
-    font-family: 'Open Sans', sans-serif;
-    width:80%;
-    margin-left: auto;
-    margin-right: auto;
+
+body {
+  background-color: #f8f8f6;
+  font-family: "Open Sans", sans-serif;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.navbar{
-    height:100px;
+.menu_button{
+    display:inline-block;
+    margin-top: 20px;
+    padding:6px 10px;
+    color:#f8f8f6;;
+    text-decoration:none;
+    background-color: #6b9b8a;
+    border-radius: 4px;
 }
 
-.nav_item{
-    padding-top:12px;
-    padding-bottom:4px;
-    border-bottom:1px solid #000000
-}
-.container{
-    height:700px;
-    margin-top:250px;
+.navbar {
+  height: 100px;
 }
 
-#header{
-    font-size: 36px;
-    font-weight: 600;
-    color:#6B9B8A;
+.nav_item {
+  padding-top: 12px;
+  padding-bottom: 4px;
+  border-bottom: 1px solid #000000;
+  list-style:none;
+  
+}
+.container {
+  height: 700px;
+  margin-top: 157px;
 }
 
-#subheader{
-    font-size:36px;
-    font-weight:600;
+#header {
+  font-size: 36px;
+  font-weight: 600;
+  color: #6b9b8a;
+}
+
+#subheader {
+  font-size: 36px;
+  font-weight: 600;
+}
+
+@media screen and (min-width:600px){
+    .menu_button{
+        display:none;
+    }
+    .navigation{
+        position:absolute;
+        top:15px;
+    }
+
+    .navigation li{
+        display:inline-block;
+        margin-right:15px;
+    }
+
+    .container{
+        margin-top:206px;
+    }
 }
