--- a/images/home.css
+++ b/images/home.css
@@ -145,6 +145,11 @@ body {
   margin-right: auto;
 }
 
+a{
+    text-decoration:none;
+    color:#000000;
+}
+
 .menu_button{
     display:inline-block;
     margin-top: 20px;
@@ -166,6 +171,17 @@ body {
   list-style:none;
   
 }
+
+.navigation li{
+    transition:0.05s font-size 0.01s;
+}
+
+
+.navigation li:hover{
+    font-size:24px;;
+    
+}
+
 .container {
   height: 700px;
   margin-top: 157px;
