--- a/FInal Project/styles.css
+++ b/FInal Project/styles.css
@@ -57,11 +57,10 @@ body{
 
 .firstrow{
     background-image: url(Images/Fondo1.jpg);
-	height:664px;
+	min-width: 755px;
 	background-repeat: no-repeat;
 	background-size:100% auto;
 	color:#f5f0ed;
-	display:block;
 }
 
 .navbar{
@@ -81,14 +80,14 @@ body{
 	padding:16px;
 	margin-top:32px;
 	font-weight: 600;
-	font-size:12px;
+	font-size:14px;
 }
 
 .caption{
 	font-size:44px;
 	font-weight:800;
 	max-height:150px;
-	width:400px;
+	width:500px;
 	margin-left:auto;
 	margin-right:auto;
 	padding-top: 64px;
@@ -113,25 +112,45 @@ body{
 	padding-top:36px;
 	padding-bottom:12px;
 	font-size:16px;
-	
 }
 
 .secondrow{
-	width:50%;
+	width:100%;
+	height:350px;
 }
 
 .secondrow h2{
-	font-size:24px;
+	font-size:28px;
+	padding-top:96px;
+	text-align: center;
+	font-weight: 700;
 }
 
-.secondrow .promo1{
-	display:inline-block;
+.secondrow p{
+	font-size:16px;
+	text-align:center;
+	padding-top:24px;
+}
+
+.promo1, .promo2{
+	float:left;
+	width:50%;
+	height:350px;
+}
+ .promo1{
 	background-color: #d03b40;
 	color:#ded6c0;
-	height:120px;
 }
-.secondrow .promo2{
-	display:inline-block;
+
+.promo2{
 	background-color: #ded6c0;
 	color:#d03b40;
+}
+
+.thirdrow{
+    background-image: url(Images/Fondo2.jpg);
+	min-width: 755px;
+	background-repeat: no-repeat;
+	background-size:100% auto;
+	color:#f5f0ed;
 }
