--- a/FInal Project/styles.css
+++ b/FInal Project/styles.css
@@ -150,7 +150,20 @@ body{
 .thirdrow{
     background-image: url(Images/Fondo2.jpg);
 	min-width: 755px;
+	
 	background-repeat: no-repeat;
 	background-size:100% auto;
 	color:#f5f0ed;
+}
+
+.productbutton{
+	display:block;
+	margin-top:20px;
+	padding:10px;
+	width:268px;
+	margin-left:auto;
+	margin-right:auto;
+	text-align: center;
+	border:1px solid #f5f0ed;
+	
 }
