--- a/FInal Project/styles.css
+++ b/FInal Project/styles.css
@@ -167,3 +167,48 @@ body{
 	border:1px solid #f5f0ed;
 	
 }
+
+.fourthrow{
+	width:100%;
+	height:350px;
+	background-color: #f5f0ed;
+	padding:20px;
+}
+
+.productprofile{
+	width:47%;
+	height:175px;
+	float:left;
+	padding-right:10px;
+	padding-bottom:10px;
+	
+}
+
+.menulogo{
+	width:33%;
+	float:left;
+	
+}
+
+.menulogo img{
+	width:90%;
+}
+
+.menudescrip{
+	width:67%;
+	float:left;
+	line-height:1.5;
+	font-size:12px;
+}
+
+.menudescrip h3{
+	font-weight:700;
+}
+
+.sixthrow{
+	background-color: #3c3c3b;
+	color:#f5f0ed;
+	width:100%;
+	height:100px;
+	padding-top:40px;
+}
