--- a/FInal Project/styles.css
+++ b/FInal Project/styles.css
@@ -53,6 +53,13 @@ table {
 
 body{
     font-family: 'Open Sans', sans-serif;
+	background-color:#000000;
+}
+
+.all{
+	max-width:1280px;
+	margin-left:auto;
+	margin-right:auto;
 }
 
 .firstrow{
@@ -66,7 +73,6 @@ body{
 .navbar{
 	height:64px;
 	width: 100%;
-	
 }
 
 .logo{
@@ -114,6 +120,10 @@ body{
 	font-size:16px;
 }
 
+.spacing{
+	width:100%;
+	height:100px;
+}
 .secondrow{
 	width:100%;
 	height:350px;
