--- a/FInal Project/styles.css
+++ b/FInal Project/styles.css
@@ -56,6 +56,11 @@ body{
 	background-color:#000000;
 }
 
+a{
+	text-decoration:none;
+	color:#f5f0ed;
+}
+
 .all{
 	max-width:1280px;
 	margin-left:auto;
@@ -87,6 +92,7 @@ body{
 	margin-top:32px;
 	font-weight: 600;
 	font-size:14px;
+	
 }
 
 .caption{
@@ -117,7 +123,7 @@ body{
 	line-height: 1.5;
 	padding-top:36px;
 	padding-bottom:12px;
-	font-size:16px;
+	font-size:12px;
 }
 
 .spacing{
@@ -131,11 +137,13 @@ body{
 	
 }
 
-.secondrow h2{
+.promoheader{
 	font-size:28px;
 	padding-top:96px;
-	text-align: center;
 	font-weight: 700;
+	width:70%;
+	margin-left:auto;
+	margin-right:auto;
 }
 
 .promo1, .promo2{
