--- a/FInal Project/styles.css
+++ b/FInal Project/styles.css
@@ -69,7 +69,7 @@ a{
 
 .firstrow{
     background-image: url(Images/Fondo1.jpg);
-	min-width: 755px;
+	width:100%;
 	background-repeat: no-repeat;
 	background-size:cover;
 	background-position: center;
@@ -179,7 +179,7 @@ a{
 
 .thirdrow{
     background-image: url(Images/Fondo2.jpg);
-	min-width: 755px;
+	width: 100%;
 	background-repeat: no-repeat;
 	background-size:cover;
 	color:#f5f0ed;
@@ -251,4 +251,34 @@ a{
 	position:absolute;
 	top:50%;
 	margin-left:16px;
+}
+
+@media screen and (max-width:710px){
+	.all{
+		max-width:710px;
+	}
+
+	.firstrow{
+		width:100%;
+	}
+	
+	.promo1, .promo2{
+		width:100%;
+	}
+
+	.thirdrow{
+		display: inline-block;
+	}
+
+	.productprofile{
+		width:100%;
+	}
+
+	.menulogo{
+		display:block; 
+		margin-left:auto;
+		margin-right:auto;
+	}
+
+	
 }
