--- a/FInal Project/styles.css
+++ b/FInal Project/styles.css
@@ -269,7 +269,8 @@ a{
 
 	.caption{
 		font-size:32px;
-		width:80%;
+		width:60%;
+		font-weight:800;
 	}
 	
 	.subcaption{
@@ -284,27 +285,32 @@ a{
 	}
 
 	.fourthrow{
-		height:1100px;
+		height:960px;
 	}
 	.productprofile{
 		width:100%;
-		height:270px;
+		height:240px;
 	}
 
 	.menulogo{
 		float:none;
 		margin-left:auto;
 		margin-right:auto;
-		width:35%;
+		width:30%;
 	}
 
 	.menudescrip{
 		width:90%;
 		margin-left:24px;
+		margin-top:16px;
+		
 		
 	}
 
-	
+	.sixthrow{
+		
+		overflow:auto;
+	}
 
 	
 }
