--- a/FInal Project/styles.css
+++ b/FInal Project/styles.css
@@ -81,30 +81,25 @@ a{
 	width: 100%;
 }
 
+.navigation li{
+	font-weight: 600;
+	font-size:14px;	
+	padding:8px;
+}
+
 .logo{
 	float: left;
 	margin-top:24px;
 	margin-left:24px;
 }
 
-.menu_button{
-	display:none;
-}
-.navigation li{
-	float:right;
-	padding:16px;
-	margin-top:32px;
-	font-weight: 600;
-	font-size:14px;
-	
-}
+
 
 .caption{
-	display:block;
 	font-size:44px;
 	font-weight:800;
-	max-height:150px;
-	width:50%;
+	
+	width:45%;
 	margin-left:auto;
 	margin-right:auto;
 	padding-top: 64px;
@@ -112,7 +107,7 @@ a{
 }
 
 .caption #caption1 #caption2 #caption3{
-	display: inline-block;
+	display: block;
 }
 
 .caption #caption3{
@@ -120,7 +115,7 @@ a{
 }
 
 .subcaption{
-	height:auto;
+	display:block;
 	width:510px;
 	margin-left:auto;
 	margin-right:auto;
@@ -265,8 +260,26 @@ a{
 		width:100%;
 	}
 
-	.navigation li{
-		display:none;
+	.js .navigation{
+		max-height: 0;
+		overflow: hidden;
+		width:30%;
+		transition: max-height 0.5s;
+		position:absolute;
+		top:50px;
+		right:20px;
+		background-color: #d03b40;	
+		display:flex;
+		flex-direction: column-reverse;
+	}
+
+	.js .navigation li{
+		border:1px solid #ded6c0;
+		
+	}
+
+	.js .navigation.menu_popup{
+		max-height:200px;
 	}
 
 	.menu_button{
@@ -315,14 +328,20 @@ a{
 		width:90%;
 		margin-left:24px;
 		margin-top:16px;
-		
-		
 	}
 
 	.sixthrow{
-		
 		overflow:auto;
 	}
+}
 
-	
+@media screen and (min-width:711px){
+
+	.menu_button{
+		display:none;
+	}
+	.navigation li{
+		float:right;
+		margin-top:45px;
+	}
 }
